--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,18 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         CGI-Application-Plugin-ProtectCSRF
-version:      0.02
-version_from: ProtectCSRF.pm
-installdirs:  site
+---
+name: CGI-Application-Plugin-ProtectCSRF
+version: 1
+author:
+  - 'Akira Horimoto <kurt0027@gmail.com>'
+abstract: Plug-in protected from CSRF
+license: perl
 requires:
-    CGI::Application:              4.04
-    CGI::Application::Plugin::Session: 1.01
-    Digest::SHA1:                  2.07
-    List::Util:                    1.18
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
+  Attribute::Handlers: 0.78
+  CGI::Application: 4.04
+  CGI::Application::Plugin::Session: 1.01
+  Digest::SHA1: 2.07
+generated_by: Module::Build version 0.2808
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.2.html
+  version: 1.2
+resources:
+  license: http://dev.perl.org/licenses/
